# mx3-public-shim

./: .gitattributes  .gitignore  .mx3-public-sync.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  SYNC_FROM_MAIN_REPO.md  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  secret-scan.yml
contrib/mempalace/: PR_CANDIDATE.md
contrib/mempalace/examples/: mx3_shim_chroma_accel.md  mx3_shim_chroma_accel.py
contrib/memryx/: MemryX_eXamples_COMPANION_PR_CANDIDATE.md  MxAccl_WINDOWS_RECOVERY_PR_CANDIDATE.md
docs/: AGENT_QUICKSTART.md  CODEX_SETUP_AND_PUBLIC_SYNC.md  HUMAN_QUICKSTART.md  MEMPALACE_CORRELATION.md  MEMPALACE_PR_CANDIDATE.md  PRIVATE_PUBLIC_EXPORT_WORKFLOW.md  PUBLIC_BOUNDARIES.md  PUBLIC_FILE_MAP.md  TRACKED_PUBLIC_REPO.md  UI_VALUE_NOTES.md
electron/: launch.js  main.js  preload.js
examples/: llm_generate.py  mempalace_chroma_demo.py
src/mx3_public_shim/: __init__.py  config.py  doctor.py  mempalace.py  runtime.py  server.py
src/mx3_public_shim/frontend/: app.js  index.html  styles.css
src/mx3_public_shim/providers/: __init__.py  base.py  cpu_reference.py  mx3_linux.py  openai_compat.py
tests/: test_config.py  test_mempalace.py  test_runtime.py
tools/: check_public_repo_hygiene.py
